fix(readonly): Use a textarea for readonly values, so long data is visible and newlines are respected #BQ-5890

--- a/src/app/modules/readonly/readonly.component.scss
+++ b/src/app/modules/readonly/readonly.component.scss
@@ -1,11 +1,17 @@
-// sass-lint:disable-all
-:host::ng-deep {
-  .mat-form-field-underline {
-    display: none;
+@import 'globals/variables';
+@import '~@angular/material/theming';
+
+// Suppress the border on the bottom of the field
+:host {
+  ::ng-deep {
+    .mat-form-field-underline {
+      display: none;
+    }
   }
 }
 
-// sass-lint:enable-all
 .mat-form-field {
-  padding-left: 12px;
+  padding: 0 $bq-margin;
+  font-size: 14px;
+  line-height: 20px;
 }
